# Cryptoolsec

./: .gitignore  Cryptoolsec.spec  README.md  pyproject.toml  requirements.txt
cryptoolsec/: main.py  run_gui.py
cryptoolsec/assets/: icon.icns
cryptoolsec/cli/: handlers.py  password_utils.py
cryptoolsec/core/: crypto_logic.py  file_handler.py
cryptoolsec/gui/: app.py  controller.py  file_handler.py  file_selectors_widget.py  main_window.py  secret_input_widget.py  worker.py
cryptoolsec/utils/: constants.py  exceptions.py
tests/: test_cli_e2e.py
