# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoolsec"
version = "0.1.0"
description = "CLI and GUI tool in Python for strong file/stream encryption (AES-GCM) and decryption, using Argon2id for password-based keys."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
# authors = [ {name = "my_name", email = "my_email@example.com"} ]
dependencies = [
    "argon2-cffi>=21.1.0",
    "pycryptodome>=3.10.1",
    "PySide6>=6.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptoolsec*"]
exclude = ["tests*"]

[project.scripts]
cryptoolsec = "cryptoolsec.main:main"

[project.gui-scripts]
cryptoolsec-gui = "cryptoolsec.gui.app:run"